# scansegy

./: .gitignore  CMakeLists.txt  README.md
src/: basetypes.h  main.cpp  segyscanner.cpp  segyscanner.h
src/segyread/: SegyReader.cpp  SegyReader.hpp  SegyUtil.cpp
